--- a/app/globals.css
+++ b/app/globals.css
@@ -61,7 +61,7 @@ body,
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: hsl(246, 62%, 20%);
-  --primary-foreground: hsl(246, 37%, 27%);
+  --primary-foreground: hsl(225.42deg 100% 93.11%);
   --secondary: hsl(9, 89%, 93%);
   --secondary-foreground: hsl(269, 77%, 82%);
   --muted: oklch(0.97 0 0);
